src/test/deca/context/invalid/not_valid_3.deca
// Test non valide 3
// Mauvaise utilisation du println;
// Créé le 13.01.2022
// Not yet implemented

{
println ("bonjour"1 2 3);
}